# checkbox_parser

./: LICENSE  README.md  example.py  foo.html  run-bkp.py  setup.cfg
src/checkbox_parser/: __init__.py  html_parser.py
