[metadata]
name = checkbox_parser-riccimadeit
version = 0.0.1
author = ricardo cantu
author_email = ricardocantum@gmail.com
description = this package can parse a list and give a html string
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/richyxi/checkbox_parser
project_urls =
    Bug Tracker = https://github.com/richyxi/checkbox_parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src